examples/test/testpolicy2387.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2387
  namespace: namespace172
spec:
  podSelector:
    matchLabels:
      key28: value48
      key1: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value15
          key47: value34
          key45: value5
      podSelector:
        matchLabels:
          key33: value35
          key38: value9
